--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -12,7 +12,7 @@
 
     <!-- Success note (after account creation) -->
     <% if (typeof created !== 'undefined' && created) { %>
-      <div style="
+      <div role="status" aria-live="polite" style="
         background:#e8faef;
         border:1px solid #9bd3b3;
         color:#205e37;
@@ -25,7 +25,7 @@
 
     <!-- Error note (bad credentials, etc.) -->
     <% if (typeof error !== 'undefined' && error) { %>
-      <div style="
+      <div role="alert" aria-live="assertive" style="
         background:#ffe1e1;
         border:1px solid #dd9a9a;
         color:#7a2e2e;
